# winged-bean

./: .actrc  .editorconfig  .gitignore  .gitleaks.toml  .mcp.json  .mega-linter.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  2025-10-04-caveat-the-messages-below-were-generated-by-the-u-001.txt  AGENTS.md  AUDIO-FINAL-STATUS.md  AUDIO-INTEGRATION-HANDOVER.md  AUDIO-SESSION-3-HANDOVER.md  AUDIO-SESSION-4-HANDOVER.md  AUDIO-SETUP-SUMMARY.md  AUDIO-TEST-READY.md  CLAUDE.md  HANDOVER.md  LICENSE  LOG-CONSOLE-HANDOVER.md  MENU-BAR-COMPLETE.md  MENU-BAR-HANDOVER.md  MENU-BAR-IMPLEMENTATION-HANDOVER.md  NUGET-PACKAGE-HANDOVER.md  PM2-COMMANDS.md  PTY-FIX-HANDOVER.md  QUICK-START.md  README.md  SESSION-COMPLETE.md  Taskfile.yml  UI-ENHANCEMENTS-HANDOVER.md  V-PREFIX-FIX-SUMMARY.md  ecosystem.config.js  opencode.json  package-lock.json  qodana.yaml  renovate.json
.agent/: README.md
.agent/adapters/: claude.md  copilot.md  windsurf.md
.agent/base/: 00-index.md  10-principles.md  20-rules.md  30-glossary.md
.agent/meta/: adapter-template.md  changelog.md  versioning.md
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md  labels.catalog.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  config.yml
.github/events/: push.json
.github/workflows/: TESTING.md  agent-auto-retry.yml  agent-event-router.yml  auto-label-issues.yml  deploy-flyio-scheduled.yml  e2e-tests-deployed.yml  e2e-tests-task.yml  flyio-scheduled-start-stop.yml  mega-linter.yml  opencode-agent-commands.yml  opencode.yml  plan-check.yml  (+3 more)
.windsurf/: rules.md
development/python/: .gitignore  pyproject.toml  requirements.txt  test_precommit.py  test_scripts.sh
development/python/src/hooks/: README.md  __init__.py  pre_commit_issue_validator.py
development/python/src/scripts/: __init__.py  organize_chat_history.py  validate_issue_dependencies.py
development/python/src/scripts/docs/: __init__.py  archive_old_files.py  detect_orphans.py  validate_frontmatter.py
development/python/src/scripts/workflows/: __init__.py  handle_agent_failure.py  monitor_runner_usage.py  validate_issue_dependencies.py  validate_pr_issue_link.py
development/python/src/workflows/: __init__.py  event_router.py
development/python/tests/: test_issue_validator.py
docs/: .editorconfig  .gitignore  INDEX.md  NEXT-SESSION.md  SESSION-HANDOVER-2025-10-03.md  TERMINAL_GUI_PTY_STATUS.md  deployment-platform-survey.md
planning/: .gitignore  PYTHON_MIGRATION_COMPLETE.md  README.md  RESTORATION_SUMMARY.md  codex-config-template.toml  plan.yaml
scripts/: create-github-issues.sh  organize-chat-history-fixed.sh  organize-chat-history.sh  record-terminal-gui-session.sh  verify-runtime-artifacts.sh
(+949 files in other folders)
